bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "rules_oci", version = "2.0.0")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.8")
bazel_dep(name = "aspect_rules_lint", version = "1.0.9")  # rules_lint
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "python_base",
    image = "python",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],
    tag = "3.11-slim",
)
use_repo(oci, "python_base")
use_repo(oci, "python_base_linux_amd64")
use_repo(oci, "python_base_linux_arm64_v8")
